[gd_scene load_steps=3 format=3 uid="uid://cf815k86w64xq"]

[ext_resource type="Theme" uid="uid://ckdypew3dhoqq" path="res://addons/humanizer/data/resources/humanizer_inspector_theme.tres" id="1_bdjnp"]
[ext_resource type="Script" path="res://addons/humanizer/scripts/inspector/human_randomizer_inspector_scene.gd" id="2_gxs3g"]

[node name="HumanRandomizerInspector" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bdjnp")
script = ExtResource("2_gxs3g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="RandomizeBodyPartsButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Randomize BodyParts"

[node name="RandomizeClothesButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Randomize Clothes"

[node name="RandomizeShapekeysButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Randomize Shapekeys"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Category"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Randomization"
horizontal_alignment = 2

[node name="RandSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
max_value = 1.0
step = 0.01
value = 0.2

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Asymmetry"
horizontal_alignment = 2

[node name="AsymSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
max_value = 1.0
step = 0.01
value = 0.1
